kubia/curl.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl
spec:
  containers:
  - name: main
    image: curlimages/curl           # using tutum-crul image from Docker Hub because it contains the binaries of curl
    command: ["sleep", "9999999"]
