kubia/dns.yaml
apiVersion: v1
kind: Pod
metadata:
  name: dns
spec:
  containers:
  - name: main
    image: sameersbn/bind           # using sameersbn/bind image from Docker Hub because it contains the binaries of curl
    command: ["sleep", "9999999"]
