kubia/fortune-pod-args.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fortune2s
spec:
  containers:
  - image: ramane/fortune:args             # using fortune image taged by args to generate html files
    args: ["2"]                            # overriding the argument to pass to app
    name: html-generator
    volumeMounts:
      - name: html                         # using volume by its name, mounted at var/htdocs
        mountPath: /var/htdocs
  - image: nginx:alpine                    # using nginx image from docker hub as a server to serve html files
    name: web-server
    volumeMounts:
      - name: html                         # using volume by its name in readOnly to serve a generated html files
        mountPath: /usr/share/nginx/html
        readOnly: true
    ports:
    - containerPort: 80
      protocol: TCP
  volumes:                                 # defining a volume type emptyDir with name:html
    - name: html
      emptyDir: {}
