kubia/fortune-pod-configmap-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fortune-configmap-volume
spec:
  containers:
  - image: ramane/fortune:env              
    name: html-generator
    volumeMounts:
      - name: html                         
        mountPath: /var/htdocs
  - image: nginx:alpine
    name: web-server                    
    volumeMounts:
      - name: html                         
        mountPath: /usr/share/nginx/html
        readOnly: true
      - name: config
        mountPath: /etc/nginx/conf.d
        readOnly: true
    ports:
    - containerPort: 80
      protocol: TCP
  volumes:                                 
    - name: html
      emptyDir: {}
    - name: config
      configMap:
        name: fortune-config
