kubia/fortune-pod-https.yaml
apiVersion: v1
kind: Pod
metadata:
  name: fortune-https
spec:
  containers:
  - image: ramane/fortune:env              
    name: html-generator
    volumeMounts:
      - name: html                         
        mountPath: /var/htdocs
  - image: nginx:alpine
    name: web-server                    
    volumeMounts:
      - name: html                         
        mountPath: /usr/share/nginx/html
        readOnly: true
      - name: config
        mountPath: /etc/nginx/conf.d
        readOnly: true
      - name: certs
        mountPath: /etc/nginx/certs/
        readOnly: true 
    ports:
    - containerPort: 80
      protocol: TCP
    - containerPort: 443
  volumes:                                 
    - name: html
      emptyDir: {}
    - name: config
      configMap:
        name: fortune-config
    - name: certs
      secret:
        secretName: fortune-https
