kubia/gitrepo-volume-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gitrepo
spec:
  containers:
  - image: nginx:alpine
    name: web-server
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
      readOnly: true
    ports:
    - containerPort: 80
      protocol: TCP
  volumes:
    - name: html
      gitRepo:
        repository: https://github.com/RamaneDev/kubia-website-example.git
        revision: master
        directory: .       # we want the repo git to be cloned into the root dir of the volume
                         # gitRepo does not keep the volume in sync with gitHub in cas of new 
                         # commits, to get the lasts commits we have to remove the pod and 
                         # generate a new one kubernates don't provide a future that keep the gitRepo
                         # in sync with a git hub, te keep then the gitrepo in sync, we shoud develop
                         # a process for that
