kubia/kubia-gpu.yaml
apiVersion: v1
kind: Pod
metadata:
  name:  kubia-gpu
spec:
  nodeSelector:
    gpu: "true"
  containers:
        - name: kubia
          image: docker.io/ramane/kubia
          ports:
          - containerPort: 8080
            protocol: TCP
