kubia/kubia-manual.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kubia-manual
spec:
  containers:
        - name: kubia
          image: docker.io/ramane/kubia
          ports:
          - containerPort: 8080
            protocol: TCP
