kubia/mongodb-pod-gcepd.yaml
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
spec:
  volumes:
  - name: mongodb-data
    gcePersistentDisk:           # the type of the volume in a GCE Persistent Disk
      pdName: mongodb            # the name of a persisent disk that we created with commandLine : gcloud compute disks create mongodb --zone=europe-west4-a --size=10GBgcloud compute disks create mongodb --zone=europe-west4-a --size=10GBgcloud compute disks create mongodb --zone=europe-west4-a --size=10GB
      fsType: ext4               # The fileSystem type of linux
  containers:
  - image: mongo                 # mongodb image from docker hub
    name: mongodb
    volumeMounts:
    - name: mongodb-data         # name of mounted volume its name must the same as the one we have defined on ligne 7
      mountPath: /data/db
    ports:
    - containerPort: 27017
      protocol: TCP
