kubia/kubia-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia
spec:
  tls:
  - hosts:
    - kubia.example.com
    secretName: tls-secret
  rules:
  - host: kubia.example.com             # this Ingress maps the kubia.example.com domain name to your service
    http:
      paths:
      - path: /*                         # all requests will be sent to port 80 of the kubia-nodeport service
        pathType: ImplementationSpecific
        backend:
          service:
            name: kubia-nodeport
            port:
              number: 80
